# tasks

./: .env.example  .gitignore  Cargo.toml  OAUTH_SETUP.md  README-MICROSERVICES.md  README.md  docker-compose.yml  docker-compose.yml.bak  fix_compilation.py  test-multiuser.sh
services/ai-agent-service/: Cargo.toml  Dockerfile
services/ai-agent-service/src/: llm_client.rs  main.rs
services/case-management-service/: Cargo.toml  Dockerfile
services/case-management-service/src/: main.rs
services/channel-service/: Cargo.toml  Dockerfile
services/channel-service/src/: main.rs
services/dashboard-service/: Cargo.toml  Dockerfile
services/dashboard-service/src/: main.rs  oauth.rs
services/email-collector-service/: .env.example  Cargo.toml  Dockerfile  README.md
services/email-collector-service/src/: main.rs
services/persistence-service/: Cargo.toml  Dockerfile
services/persistence-service/migrations/: 001_initial.sql
services/persistence-service/src/: database.rs  database_postgres.rs  database_simple.rs  database_working.rs  main.rs
services/task-management-service/: Cargo.toml  Dockerfile
services/task-management-service/src/: main.rs
shared/common/: Cargo.toml
shared/common/src/: config.rs  http_client.rs  lib.rs
shared/models/: Cargo.toml
shared/models/src/: lib.rs
src/: agent.rs  cli.rs  main.rs  task.rs  task_list.rs
