[package]
name = "dashboard-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenv = { workspace = true }
anyhow = { workspace = true }
models = { path = "../../shared/models" }
common = { path = "../../shared/common" }
html-escape = "0.2"
reqwest = { version = "0.11", features = ["json"] }
oauth2 = "4.4"
url = "2.4"
uuid = { version = "1.0", features = ["v4"] }
axum-extra = { version = "0.9", features = ["cookie"] }
tower-cookies = "0.10"
