[package]
name = "email-collector-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Reuse shared crates from the workspace where possible.
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dotenv = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }

# Microsoft Graph API dependencies
reqwest = { version = "0.11", features = ["json"] }

# Import the shared common utilities and models defined in this repository.
common = { path = "../../shared/common" }
models = { path = "../../shared/models" }